<resources>
    <string name="app_name" translatable="false">Planeta Buffet</string>

    <string name="facebook_app_id" translatable="false">122553665031180</string>
    <string name="fb_login_protocol_scheme" translatable="false">122553665031180</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="events">Events</string>
    <string name="about">About </string>
    <string name="choose_event_type">Choose the type of your event:</string>
    <string name="anniversary">ANNIVERSARY</string>
    <string name="wedding">WEDDING</string>
    <string name="sweet_fifteen">SWEET FIFTEEN</string>
    <string name="corporate_parties">CORPORATE PARTY</string>
    <string name="choose_location">Choose the location of your event:</string>
    <string name="title_activity_suppliers" translatable="false">SuppliersActivity</string>
    <!--string name="section_format">Hello World from section: %1$d</string-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello">Hello</string>
    <string name="hi">Hi!</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="not_a_user_yet_join_now">Not a user yet? <u>Join now.</u></string>
    <string name="wedding_background" translatable="false">Wedding background</string>
    <string name="weddings">WEDDINGS</string>
    <string name="espaco_tenor_background" translatable="false">ESPAÇO TENOR</string>
    <string name="title_activity_maps">Map</string>
    <string name="are_you_ready_for_party">Are you ready for party?</string>
    <string name="login" translatable="false">Login</string>
    <string name="password">Password</string>
    <string name="keep_connected">Keep Connected</string>
    <string name="forgotten_your_password">Forgotten your password</string>
    <string name="log_in" translatable="false">Log in</string>
    <string name="name">name</string>
    <string name="user">user</string>
    <string name="ok" translatable="false">OK</string>
    <string name="planeta_buffet" translatable="false">Planeta Buffet</string>
    <string name="save_to_your_favorites">Save to your favorites</string>
    <string name="contact">Contact: </string>
    <string name="version_1_0">Version 1.0</string>
    <string name="developed_by">Developed by Danielle Pereira</string>
    <string name="developed_by_description">Created in haste in 2017 by a completely lost student, this app was so sure that today is used by all Brazilian buffet networks! #ihopeso</string>
    <string name="countdown_part_1" />
    <string name="countdown_part_3">days left for your event!</string>
    <string name="introduction_part_2">We noticed that you are new in here! =)</string>
    <string name="introduction_part_3">Before going ahead, we need to know a little about your great event!</string>
    <string name="btn_continue">Continue</string>
    <string name="espaco_tenor" translatable="false">Espaço Tenor</string>
    <string name="villa_bertolazzi" translatable="false">Villa Bertolazzi</string>
    <string name="espaco_tenor_2" translatable="false">Espaço Tenor II</string>
    <string name="alphaville" translatable="false">Alphaville</string>
    <string name="alto_de_santana" translatable= "false">Alto de Santana</string>
    <string name="analia_franco" translatable="false">Anália Franco</string>
    <string name="alto_da_lapa" translatable="false">Alto da Lapa</string>
    <string name="guarulhos" translatable="false">Guarulhos</string>
    <string name="jundiai" translatable="false">Jundiaí</string>
    <string name="casa_da_arvore" translatable="false">Casa da Árvore</string>
    <string name="morumbi" translatable="false">Morumbi</string>
    <string name="pompeia" translatable="false">Pompéia</string>
    <string name="santana" translatable="false">Santana</string>
    <string name="tatuape" translatable="false">Tatuapé</string>
    <string name="tatuape_2" translatable="false">Tatuapé II</string>
    <string name="vila_romana" translatable="false">Vila Romana</string>
    <string name="event_date">Event Date:</string>
    <string name="buffet_address">Buffet Address:</string>
    <string name="buffet_chosen">Buffet Chosen:</string>
    <string name="party_type">Party Type:</string>
    <string name="your_registration">Your Registration</string>
    <string name="segment">Segment</string>
    <string name="home" translatable="false">Home</string>
    <string name="my_account">My account</string>
    <string name="event_settings">Change Event Settings</string>
    <string name="suppliers">Suppliers</string>
    <string name="buffets" translatable="false">Buffets</string>
    <string name="favorites">Favorites</string>
    <string name="classify_this_app">Classify this app</string>
    <string name="logout">Logout</string>
    <string name="you">you</string>
    <string name="please_enter_login">Please enter a login</string>
    <string name="please_enter_password">Please enter a password</string>
    <string name="login_password_wrong">Login or password was entered incorrectly!</string>
    <string name="mandatory_fields">All fields are mandatory! Please try again!</string>
    <string name="login_already_exist">Login already exist! Please try another one!</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="exit">Exit</string>
</resources>
