<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/event_settings" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_menu_tipo_evento"
            android:title="@string/suppliers" />
        <!--item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/favorites" /-->
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_navigation"
            android:title="@string/buffets" />
    </group>

    <item android:title="App">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_copyright"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_classify"
                android:icon="@drawable/ic_classify"
                android:title="@string/classify_this_app" />
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>
