<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/content_locations">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_espaco_tenor"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/espaco_tenor"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_villa_bertolazzi"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/villa_bertolazzi"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_espaco_tenor_2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/espaco_tenor_2"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_planeta_alphaville"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/alphaville"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_planeta_alto_santana"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/alto_de_santana"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_planeta_analia_franco"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/analia_franco"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_planeta_alto_lapa"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/alto_da_lapa"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_planeta_guarulhos"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/guarulhos"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_planeta_jundiai"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/jundiai"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_planeta_casa_arvore"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/casa_da_arvore"
                style="@style/PicassoTitle"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_planeta_morumbi"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/morumbi"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_planeta_pompeia"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/pompeia"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_planeta_santana"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/santana"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_planeta_tatuape"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/tatuape"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_planeta_tatuape_2"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/tatuape_2"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_planeta_vila_romana"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"/>

            <TextView
                android:text="@string/vila_romana"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>