<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/content_events">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_wedding"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/wedding_background"/>

            <TextView
                android:text="@string/weddings"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


                <ImageView
                    android:id="@+id/img_aniversary"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:scaleType="centerCrop" />

                <TextView
                    android:text="ANNIVERSARY"
                    style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_sweet_fifteen"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/sweet_fifteen"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/img_corporate_parties"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop" />

            <TextView
                android:text="@string/corporate_parties"
                style="@style/PicassoTitle"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>