<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_backgroung"
        android:scaleType="centerCrop"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:scaleType="centerCrop"
        tools:context="com.gmail.jumpercorderosa.planetabuffet.activity.LoginActivity">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/are_you_ready_for_party"
                    android:layout_marginBottom="50dp"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="40dp"
                    android:layout_weight="0.19" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.19">

                    <AutoCompleteTextView
                        android:id="@+id/tvEmail"
                        android:layout_width="285dp"
                        android:layout_height="52dp"
                        android:layout_marginTop="100dp"
                        android:layout_marginBottom="5dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/input_login"
                        android:hint="@string/login"
                        android:nextFocusDown="@+id/etPassword"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingLeft="50dp" />

                </android.support.design.widget.TextInputLayout>

                <!--android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/tvEmail"
                        android:layout_width="278dp"
                        android:layout_height="43dp"
                        android:layout_marginTop="80dp"
                        android:background="@drawable/input_email"
                        android:hint="Login"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingLeft="50dp">

                <android.support.design.widget.TextInputLayout-->

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="285dp"
                        android:layout_height="52dp"
                        android:layout_marginTop="70dp"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/input_password"
                        android:hint="@string/password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingLeft="50dp" />

                </android.support.design.widget.TextInputLayout>

                <CheckBox
                    android:id="@+id/cbKeepConnected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="30dp"
                    android:text="@string/keep_connected"
                    android:textStyle="bold"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/tvPasswordForgotten"
                    android:layout_width="108dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="220dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/forgotten_your_password"
                    android:textColor="#4527A0"
                    android:textStyle="bold"
                    android:layout_weight="0.05" />

                <Button
                    android:id="@+id/btnEmailLogin"
                    style="?android:textAppearanceSmall"
                    android:layout_width="210dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:textColor="#FFF"/>

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/login_button"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="40dp"
                    android:layout_marginTop="30dp" />

                <TextView
                    android:id="@+id/tvSigUp"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="0.19"
                    android:gravity="center"
                    android:text="@string/not_a_user_yet_join_now"
                    android:textColor="#ffffff"
                    android:textStyle=""
                    android:layout_gravity="center_horizontal|center|bottom"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>